--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>FlujoTvLanding</title>
-  <base href="/">
+  <title>Flujo TV Legal - IPTV y Streaming Seguro</title>
+  <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- SEO -->
+  <meta name="description" content="Flujo TV Legal ofrece planes IPTV con más de 1300 canales, soporte 24/7 y contenido premium en una sola app compatible con todos tus dispositivos.">
+  <meta name="keywords" content="Flujo TV, IPTV legal, streaming, televisión online, planes de TV, películas, deportes en vivo">
+  <meta name="author" content="Flujo TV Legal">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Flujo TV Legal - Tu entretenimiento seguro" />
+  <meta property="og:description" content="Más de 1300 canales y 10,000 películas y series en un solo lugar. Compatible con Smart TV, móviles y PC." />
+  <meta property="og:image" content="https://flujotvlegal.com/assets/logo.webp" />
+  <meta property="og:url" content="https://flujotvlegal.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
